<resources>
    <string name="app_name">Mini aap</string>
    <string name="login">Login</string>
    <string name="email_id">Email_id</string>
    <string name="password">password</string>

    <string name="reset">Reset</string>
    <string name="registration">registration</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="type">type</string>
    <string name="state">state</string>
    <string name="submit">submit</string>
    <string name="signup">signUp</string>
    <string name="show_details">show details</string>
    <string name="textview">TextView</string>
    <string name="edit_details">edit details</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
</resources>
